test/tests/stages/18_structures/invalid_types/scalar_required/subscript_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  return
  identifier(x)
  [
  const int(0)
  ]
  ;
  }
